# Dune_TP3

./: CMakeLists.txt  Makefile  README.md  client_client.cpp  client_client.h  client_protocol.cpp  client_protocol.h  common_blockingqueue.h  common_command.cpp  common_command.h  common_socket.cpp  common_socket.h  common_thread.cpp  desinstaller.sh  installer.sh  server_activegame.cpp  server_activegame.h  server_astar.cpp  server_astar.h  server_broadcaster.cpp  server_broadcaster.h  server_buildings.cpp  server_buildings.h  server_command.cpp  server_command.h  server_game.cpp  server_game.h  server_gameSet.cpp  server_gameSet.h  server_gamedata.cpp  server_gamedata.h  server_gamehandler.cpp  server_gamehandler.h  server_listener.cpp  server_listener.h  server_main.cpp  server_player.cpp  server_player.h  server_protocol.cpp  server_protocol.h  (+21 more)
Sockets/: common_socket.cpp  (+1 more)
client/: Animation.cpp  Animation.h  Area.cpp  Area.h  BackGroundTile.cpp  BackGroundTile.h  BlockingQueue.cpp  BlockingQueue.h  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  ClientInput.cpp  ClientInput.h  Construction.cpp  Construction.h  Drawer.cpp  Drawer.h  Explosion.h  GameView.cpp  GameView.h  GameWaiter.cpp  GameWaiter.h  Gameloop.cpp  Gameloop.h  Makefile  MapView.cpp  MapView.h  Mapa1.yaml  MenuImage.cpp  MenuImage.h  MenuScreen.cpp  MenuScreen.h  MenuText.cpp  MenuText.h  NonMovable.cpp  NonMovable.h  Player.cpp  Player.h  Renderizable.cpp  (+46 more)
client/build-client_interface-Desktop-Debug/: CMakeCache.txt  Makefile  client_interface.cbp  cmake_install.cmake
client/build-client_interface-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-760b2b421eb50a5a7c42.json  cmakeFiles-v1-e4e28a673d7c20b2e388.json  codemodel-v2-0afb5fa6c83616751b07.json  codemodel-v2-17d56b02c4e5ad83a0bf.json  codemodel-v2-28ee1ba7c5668ed37059.json  codemodel-v2-441d291ed36ef9b0186c.json  codemodel-v2-66d1c8ace1913a8c064a.json  codemodel-v2-7006422932110b94a3db.json  codemodel-v2-861dea85c4d188deff9c.json  codemodel-v2-87a734dffe100246891e.json  codemodel-v2-b38fbd69c58f819db259.json  codemodel-v2-efba3c9f4d32f9ef50d0.json  index-2022-05-31T15-23-23-0167.json  index-2022-06-03T00-19-13-0568.json  index-2022-06-03T01-49-43-0517.json  index-2022-06-05T19-29-45-0049.json  index-2022-06-11T16-36-56-0319.json  index-2022-06-11T17-05-00-0489.json  index-2022-06-13T18-22-57-0450.json  index-2022-06-14T02-05-21-0752.json  index-2022-06-14T13-45-22-0843.json  index-2022-06-19T22-28-44-0999.json  index-2022-06-21T13-04-30-0929.json  target-SDL2pp-Debug-6152a124e170376f819b.json  (+12 more)
client/build-client_interface-Desktop-Debug/.qtc_clangd/: compile_commands.json
client/build-client_interface-Desktop-Debug/client_interface_autogen/: mocs_compilation.cpp
client/build-client_interface-Desktop-Debug/client_interface_autogen/EWIEGA46WW/: moc_choosehouse.cpp  moc_creategamewindow.cpp  moc_joingamewindow.cpp  moc_maingame.cpp  moc_mainwindow.cpp
client/build-client_interface-Desktop-Debug/client_interface_autogen/include/: ui_choosehouse.h  ui_maingame.h  ui_mainwindow.h
client/build-client_interface-Desktop-Debug/lib/libSDL2pp/: libSDL2pp.cbp
client/client_interface/: CMakeCache.txt  CMakeLists.txt  casaAtreides.qrc  casaHarkonnen.qrc  casaOrdos.qrc  casaTreides.qrc  choosehouse.cpp  choosehouse.h  choosehouse.ui  client_interface  cmake_install.cmake  creategamewindow.cpp  creategamewindow.h  creategamewindow.ui  fondo.qrc  imagehouse.qrc  joingamewindow.cpp  joingamewindow.h  joingamewindow.ui  losewindow.cpp  losewindow.h  losewindow.ui  main.cpp  maingame.cpp  maingame.h  maingame.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  waitingWindow.cpp  waitingWindow.h  waitingWindow.ui  winwindow.cpp  winwindow.h  winwindow.ui
client/client_interface/client_interface_autogen/: moc_predefs.h  mocs_compilation.cpp
client/client_interface/client_interface_autogen/EWIEGA46WW/: moc_choosehouse.cpp.d  moc_creategamewindow.cpp.d  moc_joingamewindow.cpp.d  moc_maingame.cpp.d  moc_mainwindow.cpp.d  moc_waitingWindow.cpp.d
client/client_interface/lib/libSDL2pp/: libSDL2pp.cbp
client/client_interface/lib/libSDL2pp/SDL2pp_autogen/: moc_predefs.h
client/interface/: CMakeLists.txt
client/lib/libSDL2pp/: libSDL2pp.cbp
client/menu1_autogen/include/: ui_mainwindow.h
editor/: CMakeLists.txt  create_map.cpp  create_map.h  create_map.ui  create_window.cpp  create_window.h  create_window.ui  edit_map.cpp  edit_map.h  edit_map.ui  editor.cpp  editor.h  editor.ui  item_info.cpp  item_info.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  map_item.cpp  map_item.h  map_scene.cpp  map_scene.h  tiles_list.cpp  tiles_list.h  yaml_parser.cpp  yaml_parser.h
editor/maps/: map1.yaml  map_items.yaml
src/: BlockingQueue.cpp  CMakeLists.txt  main.cpp  map.cpp  map.h  map_items.yaml  prueba.cpp  prueba2.yaml  pueba_yaml.yaml  terrain.yaml  yaml  yaml_parser.cpp  yaml_parser.h  yaml_test.cpp
src/interfaz/build-editor_interface-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  map1.yaml  maps.yaml
src/interfaz/build-editor_interface-Desktop-Debug/.qtc_clangd/: compile_commands.json
src/interfaz/build-editor_interface-Desktop-Debug/editor_interface_autogen/: mocs_compilation.cpp
src/interfaz/build-editor_interface-Desktop-Debug/editor_interface_autogen/EWIEGA46WW/: moc_create_map.cpp  moc_create_map.cpp.d  moc_edit_map.cpp  moc_edit_map.cpp.d  moc_editor.cpp  moc_editor.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_tiles_list.cpp  moc_tiles_list.cpp.d
src/interfaz/build-editor_interface-Desktop-Debug/editor_interface_autogen/include/: ui_create_map.h  ui_edit_map.h  ui_editor.h  ui_mainwindow.h
src/interfaz/editor_interface/: create_map.cpp  create_map.h  edit_map.cpp  editor.cpp  main.cpp  mainwindow.cpp  mainwindow.h  map.cpp  map.h  map_item.cpp  map_scene.cpp  map_scene.h  tiles_list.h  yaml_parser.cpp  yaml_parser.h
src/interfaz/editor_interface/maps/: map1.yaml  map2.yaml  map_items.yaml
src/sound/: main.cpp  sound.cpp  sound.h  sound_player.cpp  sound_player2.cpp  sound_player3.cpp
(+853 files in other folders)
